--- a/induction.html
+++ b/induction.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/manual/assets/css/0.styles.0803ad10.css" as="style"><link rel="preload" href="/manual/assets/js/app.970590c2.js" as="script"><link rel="preload" href="/manual/assets/js/2.ca4397ff.js" as="script"><link rel="preload" href="/manual/assets/js/21.0e27d5ae.js" as="script"><link rel="prefetch" href="/manual/assets/js/10.dad8c7ea.js"><link rel="prefetch" href="/manual/assets/js/11.39324e28.js"><link rel="prefetch" href="/manual/assets/js/12.a1249f74.js"><link rel="prefetch" href="/manual/assets/js/13.489e500e.js"><link rel="prefetch" href="/manual/assets/js/14.2a25b36b.js"><link rel="prefetch" href="/manual/assets/js/15.b738bbb2.js"><link rel="prefetch" href="/manual/assets/js/16.68565b35.js"><link rel="prefetch" href="/manual/assets/js/17.97c7ac68.js"><link rel="prefetch" href="/manual/assets/js/18.b19bd7bc.js"><link rel="prefetch" href="/manual/assets/js/19.84290322.js"><link rel="prefetch" href="/manual/assets/js/20.ae37da71.js"><link rel="prefetch" href="/manual/assets/js/22.480a84f5.js"><link rel="prefetch" href="/manual/assets/js/23.48379c91.js"><link rel="prefetch" href="/manual/assets/js/24.108de3d2.js"><link rel="prefetch" href="/manual/assets/js/25.606094d4.js"><link rel="prefetch" href="/manual/assets/js/3.5a28bdbe.js"><link rel="prefetch" href="/manual/assets/js/4.9945a8c8.js"><link rel="prefetch" href="/manual/assets/js/5.f258cea9.js"><link rel="prefetch" href="/manual/assets/js/6.6ae5a242.js"><link rel="prefetch" href="/manual/assets/js/7.930a0628.js"><link rel="prefetch" href="/manual/assets/js/8.f50f1e58.js"><link rel="prefetch" href="/manual/assets/js/9.f25d9186.js">
+    <link rel="preload" href="/manual/assets/css/0.styles.0803ad10.css" as="style"><link rel="preload" href="/manual/assets/js/app.23f5a09b.js" as="script"><link rel="preload" href="/manual/assets/js/2.ca4397ff.js" as="script"><link rel="preload" href="/manual/assets/js/21.1b61f4c2.js" as="script"><link rel="prefetch" href="/manual/assets/js/10.dad8c7ea.js"><link rel="prefetch" href="/manual/assets/js/11.39324e28.js"><link rel="prefetch" href="/manual/assets/js/12.a1249f74.js"><link rel="prefetch" href="/manual/assets/js/13.489e500e.js"><link rel="prefetch" href="/manual/assets/js/14.2a25b36b.js"><link rel="prefetch" href="/manual/assets/js/15.b738bbb2.js"><link rel="prefetch" href="/manual/assets/js/16.68565b35.js"><link rel="prefetch" href="/manual/assets/js/17.97c7ac68.js"><link rel="prefetch" href="/manual/assets/js/18.b19bd7bc.js"><link rel="prefetch" href="/manual/assets/js/19.84290322.js"><link rel="prefetch" href="/manual/assets/js/20.ae37da71.js"><link rel="prefetch" href="/manual/assets/js/22.480a84f5.js"><link rel="prefetch" href="/manual/assets/js/23.48379c91.js"><link rel="prefetch" href="/manual/assets/js/24.108de3d2.js"><link rel="prefetch" href="/manual/assets/js/25.606094d4.js"><link rel="prefetch" href="/manual/assets/js/3.5a28bdbe.js"><link rel="prefetch" href="/manual/assets/js/4.9945a8c8.js"><link rel="prefetch" href="/manual/assets/js/5.f258cea9.js"><link rel="prefetch" href="/manual/assets/js/6.6ae5a242.js"><link rel="prefetch" href="/manual/assets/js/7.930a0628.js"><link rel="prefetch" href="/manual/assets/js/8.f50f1e58.js"><link rel="prefetch" href="/manual/assets/js/9.f25d9186.js">
     <link rel="stylesheet" href="/manual/assets/css/0.styles.0803ad10.css">
   </head>
   <body>
@@ -40,19 +40,19 @@ welcoming and on hand to answer any questions I have had. Even in the
 months leading up to commencing my post, I was regularly kept up to date
 with what was going on. As a result, I felt prepared when I arrived on
 my first day and ready to hit the ground running. My advice to anyone
-starting a post at DART is:</p> <ul><li><p>Organise a meeting with Ken O'Neill to take you on a building tour.
+starting a post at DART is:</p> <ul><li>Organise a meeting with Ken O'Neill to take you on a building tour.
 Not only will this give you an idea of where everything is, but he
 also kindly provides you with a stationary start-up pack which is
-always useful. (Ken's e-mail: <a href="mailto:v1konei3@exseed.ed.ac.uk">v1konei3@exseed.ed.ac.uk</a>)</p></li> <li><p>Introduce yourself to staff at the front desk. They set the access
-codes for the doors which are always useful to know.</p></li> <li><p>This may not apply to everyone*, but it may be worth taking a trip
+always useful. (Ken's e-mail: <a href="mailto:v1konei3@exseed.ed.ac.uk">v1konei3@exseed.ed.ac.uk</a>)</li> <li>Introduce yourself to staff at the front desk. They set the access
+codes for the doors which are always useful to know.</li> <li>This may not apply to everyone*, but it may be worth taking a trip
 to the Main Library on George Square to get your staff/ student
 card. You can get there easily by bus, with the number 5 and 23
-going from Morningside Road to the Main library.</p></li> <li><p>Ask questions whenever you need to. Don't be afraid to approach
+going from Morningside Road to the Main library.</li> <li>Ask questions whenever you need to. Don't be afraid to approach
 someone because if they don't know the answer, they will most
-certainly be able to point you in the direction of someone who does.</p></li> <li><p>Take the time to find out what everyone is working on. There are
+certainly be able to point you in the direction of someone who does.</li> <li>Take the time to find out what everyone is working on. There are
 some interesting projects going on here and you never know,
 someone's experience may be just what you need to help you get
-started.</p></li></ul> <p>Overall, getting started at DART is a positive experience and you will
+started.</li></ul> <p>Overall, getting started at DART is a positive experience and you will
 no doubt enjoy your time a part of the team.</p> <p>*Addition from Lizzy Kirkham: As a post doc I wasn't able to get my
 staff card from the main library. Instead I had to submit a photograph
 of myself via this website:
@@ -75,11 +75,11 @@ takes place once a month and needs to be booked in advance on the
 Edinburgh CRF website:
 <a href="https://www.crts.org.uk/Content.aspx?dbid=crts&amp;layout=CRTS+Master&amp;theme=CRTS&amp;areaid=118&amp;name=Courses%20Advanced&amp;type=Content&amp;oid=Screen&amp;uirefid=1274" target="_blank" rel="noopener noreferrer">https://www.crts.org.uk/Content.aspx?dbid=crts&amp;layout=CRTS+Master&amp;theme=CRTS&amp;areaid=118&amp;name=Courses Advanced&amp;type=Content&amp;oid=Screen&amp;uirefid=1274<span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></p> <p>Make sure to keep a copy of your course completion certificate and email
 it to your supervisor or study coordinator so it can be added to the
-study file.</p> <h2 id="how-to-request-annual-leave"><a href="#how-to-request-annual-leave" class="header-anchor">#</a> How to request annual leave</h2> <ol><li><p>If you can, think about how your annual leave fits with the timeline
+study file.</p> <h2 id="how-to-request-annual-leave"><a href="#how-to-request-annual-leave" class="header-anchor">#</a> How to request annual leave</h2> <p>[needs updating with info about People &amp; Money]</p> <ol><li>If you can, think about how your annual leave fits with the timeline
 for your project. Try to avoid annual leave at moments which we
 already know will be busy. That said, don't worry if you can't
-manage to co-ordinate your personal and work life!</p></li> <li><p>Email your line manager (normally Sue) to request annual leave,
-noting the dates</p></li> <li><p>Sue will reply to authorise the request</p></li> <li><p>Forward Sue's reply to Ken O'Neill at v1konei3@exseed.ed.ac.uk</p></li></ol> <p>NB: if you are a PhD student you don't have an official annual leave
+manage to co-ordinate your personal and work life!</li> <li>Email your line manager (normally Sue) to request annual leave,
+noting the dates</li> <li>Sue will reply to authorise the request</li> <li>Forward Sue's reply to Ken O'Neill at v1konei3@exseed.ed.ac.uk</li></ol> <p>NB: if you are a PhD student you don't have an official annual leave
 allowance. However you should still take holidays and it is useful and
 kind to let your supervisors know in advance!</p> <p>Sue normally marks her annual leave on a calendar on her office door. If
 you're planning further ahead than that, you can predict that she will
@@ -94,9 +94,9 @@ preferably by phone, to inform them of any sick leave.  If by email,
 then copy in Ken O'Neill so that he can record it on the HR system. 
 Managers must ensure the University knows of any absence on the first
 day of sickness as any delay can have an effect on staff's pay; if Ken
-is on leave then please email Dorothy Air directly instead.</p> <p>Staff need to provide the following information:</p> <ul><li><p>The specific reason for absence.</p></li> <li><p>The length of time they expect to be absent and/or their expected
-return date if known.</p></li> <li><p>Whether they intend to seek, or have sought medical advice or help.</p></li> <li><p>Whether there is anything their manager needs to do to reassign
-their work or meetings for the time absent.</p></li></ul> <p>Line Manager and staff must also agree how to maintain contact if the
+is on leave then please email Dorothy Air directly instead.</p> <p>Staff need to provide the following information:</p> <ul><li>The specific reason for absence.</li> <li>The length of time they expect to be absent and/or their expected
+return date if known.</li> <li>Whether they intend to seek, or have sought medical advice or help.</li> <li>Whether there is anything their manager needs to do to reassign
+their work or meetings for the time absent.</li></ul> <p>Line Manager and staff must also agree how to maintain contact if the
 absence is expected to last longer than one day, so that we are kept
 fully aware of the situation.</p> <p>After any period of absence of up to and including seven calendar days,
 staff must complete the self-certificate section (Part 1) of a <a href="http://www.docs.csg.ed.ac.uk/HumanResources/forms/Return_to_Work.doc" target="_blank" rel="noopener noreferrer"><strong>Return
@@ -114,15 +114,15 @@ Research Passport ensures that your pre-employment checks are in line
 with the NHS Employment Check Standards. Once your Research Passport is
 approved it remains valid for 3 years and enables you to obtain an
 Honorary Research contract or Letter of Access for the relevant NHS
-board.</p> <p>In order to apply for a Research Passport, the following is required:</p> <ul><li><p><em>A Criminal Record Check (PVG)</em> -- If you are not already registered
+board.</p> <p>In order to apply for a Research Passport, the following is required:</p> <ul><li><em>A Criminal Record Check (PVG)</em> -- If you are not already registered
 with the Protecting Vulnerable Groups (PVG) Scheme, then you will
 need to apply for this. However, if you already hold a valid PVG,
 then you will simply need to fill in a Disclosure Permission form
 along with a short section on the Standard Disclosure form and
-return them to the person assisting you with your application.</p></li> <li><p><em>Occupational Health Check</em> -- This requires you to fill in and
+return them to the person assisting you with your application.</li> <li><em>Occupational Health Check</em> -- This requires you to fill in and
 return the Occupational Health questionnaire to the person assisting
-you with your application.</p></li> <li><p><em>Research Passport Form</em> -- Again, this requires you to fill in and
-return the form to the person assisting you with your application.</p></li></ul> <p>In relation to your Honorary Contract you may also need to supply:</p> <ul><li><p>Two forms of ID (one of which must be address based)</p></li> <li><p>a copy of your CV (each page signed and dated)</p></li> <li><p>an IT declaration form.</p></li></ul> <p>This will all need to be returned to the person assisting you with the
+you with your application.</li> <li><em>Research Passport Form</em> -- Again, this requires you to fill in and
+return the form to the person assisting you with your application.</li></ul> <p>In relation to your Honorary Contract you may also need to supply:</p> <ul><li>Two forms of ID (one of which must be address based)</li> <li>a copy of your CV (each page signed and dated)</li> <li>an IT declaration form.</li></ul> <p>This will all need to be returned to the person assisting you with the
 application.</p> <p>The application process itself is relatively straightforward. However,
 it may take some time for your application to be processed and approved,
 so be sure to start the process as early as possible.</p> <p>Here is a useful link to help you get started:</p> <p><a href="https://www.ed.ac.uk/medicine-vet-medicine/edinburgh-medical-school/staff-students/research-passports" target="_blank" rel="noopener noreferrer">https://www.ed.ac.uk/medicine-vet-medicine/edinburgh-medical-school/staff-students/research-passports<span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></p> <h2 id="how-to-get-a-mentor-and-why"><a href="#how-to-get-a-mentor-and-why" class="header-anchor">#</a> How to get a mentor (and why)</h2> <p><em>By Sue FW</em></p> <p>Mentoring Connections is the staff mentoring programme.</p> <p>The programme uses an online resource, <a href="http://www.ed.ac.uk/platform-one" target="_blank" rel="noopener noreferrer">Platform
@@ -143,6 +143,6 @@ YOURSELF WHEN CHOOSING A MENTOR?</em></p></div> <footer class="page-edit"><!----
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/manual/assets/js/app.970590c2.js" defer></script><script src="/manual/assets/js/2.ca4397ff.js" defer></script><script src="/manual/assets/js/21.0e27d5ae.js" defer></script>
+    <script src="/manual/assets/js/app.23f5a09b.js" defer></script><script src="/manual/assets/js/2.ca4397ff.js" defer></script><script src="/manual/assets/js/21.1b61f4c2.js" defer></script>
   </body>
 </html>
